--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@vee-validate/zod": "^4.12.5",
     "@vue-flow/controls": "^1.1.0",
     "@vue-flow/core": "^1.29.2",
     "@vueuse/core": "^10.7.2",
@@ -19,7 +20,9 @@
     "radix-vue": "^1.3.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.3.11"
+    "vee-validate": "^4.12.5",
+    "vue": "^3.3.11",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.9",
